# qst-ext-appsearcher-rust

./: Cargo.toml  README.md  build.rs
src/: arg.rs  config.rs  flag.rs  lib.rs  main.rs  server.rs  shutdown.rs  trie.rs
src/config/: sys.rs
src/server/: file.rs  main.rs
