[package]
name = "qst-ext-appsearcher-rust"
version = "0.1.0"
edition = "2021"
default-run = "qst-e-a"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "appsearcher"


[[bin]]
name = "qst-e-a"
path = "src/main.rs"
test = false
bench = false

[dependencies]
prost = "0.12.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.25"
tokio = { version = "1.33.0", features = ["full"] }
tokio-stream = { version = "0.1.5", features = ["net"] }
tonic = "0.10.2"
xlog-rs = "0.3.0"
uuid = { version = "1.5.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
regex = { version = "1.10.2" }
once_cell = { version = "1.18.0" }
xcfg-rs = { version = "0.2.0", features = ["keep"] }
dirs = "5.0.1"
clap = { version = "4.5.1", features = ["derive"] }

[build-dependencies]
tonic-build = { version = "0.10.2", features = ["prost"] }
